--- a/tem/src/main/resources/templates/insert-daticorsa.html
+++ b/tem/src/main/resources/templates/insert-daticorsa.html
@@ -103,10 +103,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			</div>
 			
 			<div >
-				<label for="traffico-select">Traffico</label><select id="traffico-select" th:field="${datiCorsa.traffico}">
-				    <option th:value="'true'" th:text="Sì"></option>
-				    <option th:value="'false'" th:text="No"></option>
-				</select>
+			<div class="traffico" th:field="${datiCorsa.traffico}" ><p style="color:#656767; font-size:16px; display:inline-block; text-align:left;">Traffico</p>
+					<label class="traffico">Si
+  					<input type="radio" checked="checked" name="radio">
+  				<span class="checkmark"></span>
+				</label>
+			<label class="traffico">No
+  			<input type="radio" name="radio">
+ 			 <span class="checkmark"></span>
+		</label>
+		</div>
+			</div>
 			</div>
 			
 			
