--- a/tem/src/main/resources/templates/edit-daticorsa.html
+++ b/tem/src/main/resources/templates/edit-daticorsa.html
@@ -5,7 +5,8 @@
 	<title>Modifica Dati Corsa- Transport Efficiency Manager</title>
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-	<link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
+	<link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
 	<div class="container text-center">
