--- a/tem/src/main/resources/static/css/style2.css
+++ b/tem/src/main/resources/static/css/style2.css
@@ -30,6 +30,9 @@ h5{
 h6{
 	font-size:16px;
 }
+label {
+	color: white;
+}
 .logo{
   position: absolute;
   top: 20px;
@@ -112,7 +115,6 @@ button {
     margin-top: 100px;
 	margin-left:150px;
 	border-radius: 3px;
-	font: inherit;
 }
 .due:hover ~ hr {
   margin-left: 50%;
