--- a/tem/src/main/resources/templates/edit-linea.html
+++ b/tem/src/main/resources/templates/edit-linea.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Linea operations - Transport Efficiency Manager</title>
+    <title>Modifica linea - Transport Efficiency Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 
 <body>
     <div class="container my-5">
-        <h3>Inserisci/modifica Linea</h3>
+        <h1>Modifica Linea</h1>
         <div class="card">
             <div class="card-body">
                 <div class="col-md-8">
@@ -30,7 +29,7 @@
                             </div>
 
                             <div class="form-group col-md-8">
-                                <input type="submit" class="btn btn-primary" value="Modifica Linea">
+                                <button type="submit" class="btn btn-primary">Modifica linea</button>
                             </div>
                         </div>
                     </form>
