--- a/tem/src/main/resources/templates/edit-mezzo.html
+++ b/tem/src/main/resources/templates/edit-mezzo.html
@@ -29,7 +29,7 @@
                             </div>
 
                             <div class="form-group col-md-8">
-                                <input type="submit" class="btn btn-primary" value="Modifica mezzo">
+                                <button type="submit" class="btn btn-primary">Modifica mezzo</button>
                             </div>
                         </div>
                     </form>
