--- a/tem/src/main/resources/templates/insert-conducente.html
+++ b/tem/src/main/resources/templates/insert-conducente.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Inserisci risorse</title>
+<title>Inserisci conducente</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
