--- a/tem/src/main/resources/templates/home.html
+++ b/tem/src/main/resources/templates/home.html
@@ -72,7 +72,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </p>   
    <div class="w3-half w3-margin-bottom">
  <div class="colonna">
- <a href="/risorse/list(${azienda.id})/" class="color animazione1"><h3>Consulta le risorse inserite</h3></a>
+ <a href="/risorse/list/" class="color animazione1"><h3>Consulta le risorse inserite</h3></a>
  </div>
  <div class="colonna4">
   <a href="/programmaAutomatico/list" class="color animazione2"><h3>Consulta i dati delle corse inseriti</h3></a>
