--- a/tem/src/main/resources/templates/risorse-index.html
+++ b/tem/src/main/resources/templates/risorse-index.html
@@ -23,8 +23,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Avatar image in top left corner -->
    
   <a href="/home" class="w3-bar-item w3-button w3-padding-large w3-hover-black" >
-    <i><img src"img/home.png" th:src="@{/img/home.png}" alt="home" style="width:55px;height:55px;"/></i>
-    <p>HOME</p>
+    <i><img src"img/home.png" th:src="@{/img/user.png}" alt="user" style="width:40px;height:40px;"/></i>
+    <p>AREA UTENTE</p>
   </a>
   <a href="/risorse" class="w3-bar-item w3-button w3-padding-large w3-black" >
        <i><img src"img/bus.png" th:src="@{/img/bus.png}" alt="bus" style="width:55px;height:55px;"/></i>
