--- a/tem/src/main/resources/templates/update-success.html
+++ b/tem/src/main/resources/templates/update-success.html
@@ -1,1 +1,18 @@
-<h1>Aggiornamento effettuato con successo</h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+	<meta charset="ISO-8859-1">
+	<title>Successo modifica risorsa - Transport Efficiency Manager</title>
+	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+</head>
+<body>
+	   <div class="container my-5">
+		<div>
+			<h3 style="color:white; font-family: Montserrat; font-size:20px; text-align:center; margin-left:5px;">Aggiornamento effettuato con successo!</h3>
+		</div>
+		
+	</div>
+</body>
+</html>
