--- a/tem/src/main/resources/templates/edit-conducente.html
+++ b/tem/src/main/resources/templates/edit-conducente.html
@@ -15,36 +15,27 @@
 		</div>
 		<form th:action="@{/risorse/update/conducente/{id}(id=${conducente.id})}" 
 			method="post" style="max-width: 600px; margin: 0 auto;">
-		<div class="m-3">
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Nome: </label>
-				<div class="col-8">
-					<input type="text" th:field="${conducente.nome}" class="form-control" 
-					required minlength="2" maxlength="50" />
+		  <div class="row">
+                            
+				<div>
+					<input type="text" th:field="${conducente.nome}"  placeholder="Nome" required minlenght="2" maxlength="50" />
 				</div>
-			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Cognome: </label>
-				<div class="col-8">
-					<input type="text" th:field="${conducente.cognome}" class="form-control" 
-							required minlength="2" maxlength="50"/>
+				<div>
+					<input type="text" th:field="${conducente.cognome}"   placeholder="Cognome" required minlength="2" maxlength="50"/>
 				</div>
+				
+				<div>
+					<input type="text" th:field="${conducente.codiceFiscale}" s required minlength="16" maxlength="16" placeholder="Codice Fiscale"/>
 			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Codice Fiscale: </label>
-				<div class="col-8">
-					<input type="text" th:field="${conducente.codiceFiscale}" class="form-control" 
-							required minlength="16" maxlength="16" />
 			</div>
+                            
 			
 			
 			
 			<div>
-				<button type="submit" class="btn btn-primary">Modifica conducente</button> 
+				<button type="submit" class="update2">Modifica conducente</button> 
 			</div>
-		</div>
+		
 		</form>
 	</div>
 </body>
