--- a/tem/src/main/resources/templates/dati-corsa-success.html
+++ b/tem/src/main/resources/templates/dati-corsa-success.html
@@ -70,7 +70,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 <div class="retun animazione1" style="text-align:center;">
 		  <a th:onclick="|popEdit(${datiCorsa.id})|" class="color2"><h3>Modifica dati corsa appena inseriti<br></h3></a>
-          <a href="/home" class="color2"><h3>Torna alla home</h3></a>
+          <a href="/daticorsa/add" class="color2"><h3>Inserisci i dati di un'altra corsa<br></h3></a>
+          <a href="/risorse" class="color2"><h3>Torna alla selezione delle risorse</h3></a>
+          <a href="/daticorsa/list" class="color2 animazione4"><h3>Consulta tutti i dati inseriti</h3></a>
          
 </div>
 
