--- a/tem/src/main/resources/templates/list-daticorsa.html
+++ b/tem/src/main/resources/templates/list-daticorsa.html
@@ -62,14 +62,14 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo" style="font-size:50px;"><span class="w3-hide-small"><p>Lista <span class="w3-jumbo" style="color:#00e6e6;">risorse</span> </p></span></h1>
+    <h1 class="w3-jumbo" style="font-size:50px;"><span class="w3-hide-small"><p>Lista <span class="w3-jumbo" style="color:#ff6600;">dati corse</span> </p></span></h1>
   </header>
 
 <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
 
 <div class="w3-row">
 	<div class="tabella1">
-	<h2 style="color:white;">Conducenti</h2>
+	
 	  <table class="w3-table w3-striped w3-bordered animazione1">
 	    <tr>
 	      <th>Nome</th>
@@ -78,57 +78,21 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 	      <th>     </th>
 	      <th>     </th>
 	    </tr>
-	   <tr th:each="conducente: ${conducenti}">
-						<td th:text="${conducente.nome}">Nome</td>
-						<td th:text="${conducente.cognome}">Cognome</td>
-						<td th:text="${conducente.codiceFiscale}">Codice fiscale</td>
-						<td>  <a th:onclick="|popEdit(${conducente.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
+	   <tr th:each="daticorsa: ${DatiCorsa}">
+						<td th:text="${datiCorsa.lineaCorsa}">Linea</td>
+						<td th:text="${datiCorsa.orarioCorsa}">Orario</td>
+						<td th:text="${datiCorsa.numeroPosti}">Posti disponibili</td>
+						<td th:text="${datiCorsa.passeggeriSaliti}">Posti occupati</td>
+						<td th:text="${datiCorsa.passeggeriNonSaliti}">Passeggeri non saliti</td>
+						<td th:text="${datiCorsa.passeggeriNonSaliti}">Passeggeri non saliti</td>
+						<td th:text="${datiCorsa.traffico}">Passeggeri non saliti</td>
+						<td>  <a th:onclick="|popEdit(${daticorsa.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
 						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
 						
 						
 		</tr>
 	  </table>
-    </div>
-    <div class="tabella2">
-    <h2 style="color:white;">Linee</h2>
-	  <table class="w3-table w3-striped w3-bordered animazione2">
-	    <tr>
-	      <th>Nome</th>
-	      <th>Partenza</th>
-	      <th>Destinazione</th>
-	       <th>     </th>
-	      <th>     </th>
-	    </tr>
-	   <tr th:each="linea: ${linee}">
-						<td th:text="${linea.nome}">Nome</td>
-						<td th:text="${linea.partenza}">Partenza</td>
-						<td th:text="${linea.destinazione}">Destinazione</td>
-						<td> <a th:onclick="|popEdit(${linea.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
-						
-		</tr>
-	  </table>
-    </div>
-    
-    <div class="tabella3">
-    <h2 style="color:white;">Mezzi</h2>
-	  <table class="w3-table w3-striped w3-bordered animazione3">
-	    <tr>
-	      <th>Targa</th>
-	      <th>Capienza</th>
-	      <th>Tipo</th>
-	       <th>     </th>
-	      <th>     </th>
-	    </tr>
-	   <tr th:each="mezzo: ${mezzi}">
-						<td th:text="${mezzo.targa}">Targa</td>
-						<td th:text="${mezzo.capienza}">Capienza</td>
-						<td th:text="${mezzo.tipo}">Tipo</td>
-						<td> <a th:onclick="|popEdit(${mezzo.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
-						
-		</tr>
-	  </table>
+   
     </div>
  </div>
   
