--- a/tem/src/main/resources/templates/list-risorse.html
+++ b/tem/src/main/resources/templates/list-risorse.html
@@ -6,6 +6,11 @@
 <link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -20,6 +25,48 @@ tr, td {background-color:#01010e;}
 th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 
 </style>
+
+    <script>
+    
+    
+    function popEdit(id, risorsa) {
+    	var windowFeatures = "top=10, left=10, width=600, height=600, status=no, menubar=no, toolbar=no scrollbars=no";
+    	window.open("/risorse/" + risorsa + "/edit/" + id, "Modifica risorsa", windowFeatures);
+    }
+    
+
+        $(document).ready(function(){
+
+            $('.delete_conducente').click(function(){
+                let id_conducente = $(this).val();
+                       Swal.fire({
+                          title: 'Conferma',
+                          text: "Sicuro di voler eliminare la risorsa?",
+                          icon: 'warning',
+                          showCancelButton: true,
+                          confirmButtonColor: '#3085d6',
+                          cancelButtonColor: '#d33',
+                          confirmButtonText: 'Si'
+                        }).then((result) => {
+                          if (result.isConfirmed) {
+                              $.ajax({
+                                url: '/risorse/delete/conducente/' + id_conducente,
+                                type: get,
+                               // dataType: 'json',
+                                success: function(data) {
+                                    Swal.fire(
+                                        'Cancellato!',
+                                        'La risorsa è stata cancellata con successo!',
+                                        'success'
+                                    ),
+                                    $('#'+id_conducente).closest("tr").hide();
+                                }
+                                });
+                          }
+                       });
+                });
+        });
+    </script>
 <body class="w3-black">
 <a href="/home" ><img class="logo" id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img></a>
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
@@ -78,12 +125,12 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 	      <th>     </th>
 	      <th>     </th>
 	    </tr>
-	   <tr th:each="conducente: ${conducenti}">
+	   <tr th:each="conducente: ${conducenti}" th:id="${conducente.id}">
 						<td th:text="${conducente.nome}">Nome</td>
 						<td th:text="${conducente.cognome}">Cognome</td>
 						<td th:text="${conducente.codiceFiscale}">Codice fiscale</td>
-						<td>  <a th:onclick="|popEdit(${conducente.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
+						<td> <a href="#" th:onclick="|popEdit(${conducente.id}, 'conducente')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
+						<td ><button class="delete_conducente" th:value="${conducente.id}"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
 						
 						
 		</tr>
@@ -99,12 +146,12 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 	       <th>     </th>
 	      <th>     </th>
 	    </tr>
-	   <tr th:each="linea: ${linee}">
+	   <tr th:each="linea: ${linee}" th:id="${linea.id}">
 						<td th:text="${linea.nome}">Nome</td>
 						<td th:text="${linea.partenza}">Partenza</td>
 						<td th:text="${linea.destinazione}">Destinazione</td>
-						<td> <a th:onclick="|popEdit(${linea.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
+						<td> <a href="#" th:onclick="|popEdit(${linea.id}, 'linea')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
+						<td><a href="#"><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
 						
 		</tr>
 	  </table>
@@ -120,11 +167,11 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 	       <th>     </th>
 	      <th>     </th>
 	    </tr>
-	   <tr th:each="mezzo: ${mezzi}">
+	   <tr th:each="mezzo: ${mezzi}" th:id="${mezzo.id}">
 						<td th:text="${mezzo.targa}">Targa</td>
 						<td th:text="${mezzo.capienza}">Capienza</td>
 						<td th:text="${mezzo.tipo}">Tipo</td>
-						<td> <a th:onclick="|popEdit(${mezzo.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
+						<td> <a href="#" th:onclick="|popEdit(${mezzo.id}, 'mezzo')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
 						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
 						
 		</tr>
