--- a/tem/src/main/resources/templates/list-risorse.html
+++ b/tem/src/main/resources/templates/list-risorse.html
@@ -37,8 +37,10 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 
         $(document).ready(function(){
 
-            $('.delete_conducente').click(function(){
-                let id_conducente = $(this).val();
+            $('.delete_risorsa').click(function(){
+                let data = $(this).val();
+                let id_risorsa = data;
+                let risorsa_type = $(this).attr("id");
                        Swal.fire({
                           title: 'Conferma',
                           text: "Sicuro di voler eliminare la risorsa?",
@@ -50,16 +52,14 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
                         }).then((result) => {
                           if (result.isConfirmed) {
                               $.ajax({
-                                url: '/risorse/delete/conducente/' + id_conducente,
-                                type: get,
-                               // dataType: 'json',
-                                success: function(data) {
+                                url: '/risorse/delete/'+ risorsa_type + '/' + id_risorsa,
+                                success: function() {
                                     Swal.fire(
                                         'Cancellato!',
                                         'La risorsa è stata cancellata con successo!',
                                         'success'
                                     ),
-                                    $('#'+id_conducente).closest("tr").hide();
+                                    $('#'+id_risorsa).closest("tr").hide();
                                 }
                                 });
                           }
@@ -130,7 +130,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${conducente.cognome}">Cognome</td>
 						<td th:text="${conducente.codiceFiscale}">Codice fiscale</td>
 						<td> <a href="#" th:onclick="|popEdit(${conducente.id}, 'conducente')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td ><button class="delete_conducente" th:value="${conducente.id}"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+						<td ><button class="delete_risorsa" th:value="${conducente.id}" id="conducente"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
 						
 						
 		</tr>
@@ -151,7 +151,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${linea.partenza}">Partenza</td>
 						<td th:text="${linea.destinazione}">Destinazione</td>
 						<td> <a href="#" th:onclick="|popEdit(${linea.id}, 'linea')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><a href="#"><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
+						<td ><button class="delete_risorsa" th:value="${linea.id}" id="linea"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
 						
 		</tr>
 	  </table>
@@ -172,7 +172,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${mezzo.capienza}">Capienza</td>
 						<td th:text="${mezzo.tipo}">Tipo</td>
 						<td> <a href="#" th:onclick="|popEdit(${mezzo.id}, 'mezzo')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td><img src"img/trash.png" th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></td>
+						<td ><button class="delete_risorsa" th:value="${mezzo.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
 						
 		</tr>
 	  </table>
