--- a/tem/src/main/resources/templates/home.html
+++ b/tem/src/main/resources/templates/home.html
@@ -75,7 +75,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <a href="/risorse/list/" class="color animazione1"><h3>Consulta le risorse inserite</h3></a>
  </div>
  <div class="colonna4">
-  <a href="/programmaAutomatico/list" class="color animazione2"><h3>Consulta i dati delle corse inseriti</h3></a>
+  <a href="/daticorsa/list" class="color animazione2"><h3>Consulta i dati delle corse inseriti</h3></a>
 </div>
  <div class="colonna">
   <a href="/programmaManuale/list" class="color animazione3"><h3>Consulta i programmi creati</h3></a>
