--- a/tem/src/main/resources/templates/list-risorse.html
+++ b/tem/src/main/resources/templates/list-risorse.html
@@ -130,7 +130,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${conducente.cognome}">Cognome</td>
 						<td th:text="${conducente.codiceFiscale}">Codice fiscale</td>
 						<td> <a href="#" th:onclick="|popEdit(${conducente.id}, 'conducente')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td ><button class="delete_risorsa" th:value="${conducente.id}" id="conducente"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+						<td ><a class="delete_risorsa" th:value="${conducente.id}" id="conducente"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
 						
 						
 		</tr>
@@ -151,7 +151,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${linea.partenza}">Partenza</td>
 						<td th:text="${linea.destinazione}">Destinazione</td>
 						<td> <a href="#" th:onclick="|popEdit(${linea.id}, 'linea')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td ><button class="delete_risorsa" th:value="${linea.id}" id="linea"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+						<td ><a class="delete_risorsa" th:value="${linea.id}" id="linea"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
 						
 		</tr>
 	  </table>
@@ -172,7 +172,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${mezzo.capienza}">Capienza</td>
 						<td th:text="${mezzo.tipo}">Tipo</td>
 						<td> <a href="#" th:onclick="|popEdit(${mezzo.id}, 'mezzo')|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></td>
-						<td ><button class="delete_risorsa" th:value="${mezzo.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+						<td ><a class="delete_risorsa" th:value="${mezzo.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
 						
 		</tr>
 	  </table>
