ProgrammaCorse detail + delete + minor fixes

--- a/tem/src/main/resources/templates/home.html
+++ b/tem/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i><img src"img/people.png" th:src="@{/img/people.png}" alt="people" style="width:70px;height:70px;"/></i>
     <p>INSERISCI DATI CORSE</p>
   </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="/programmacorse" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
       <i><img src"img/programma.png" th:src="@{/img/programma.png}" alt="calendar" style="width:55px;height:55px;"/></i>
     <p>GENERA PROGRAMMA</p>
   </a>
@@ -78,7 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="/daticorsa/list" class="color animazione2"><h3>Consulta i dati delle corse inseriti</h3></a>
 </div>
  <div class="colonna">
-  <a href="/programmaManuale/list" class="color animazione3"><h3>Consulta i programmi creati</h3></a>
+  <a href="/programmacorse/list" class="color animazione3"><h3>Consulta i programmi creati</h3></a>
  </div>
 </div>
   <div class="w3-half">
