--- a/tem/src/main/resources/templates/detail-programmacorse.html
+++ b/tem/src/main/resources/templates/detail-programmacorse.html
@@ -11,7 +11,6 @@
         src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
-<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 <style>
     body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     .w3-row-padding img {margin-bottom: 12px}
@@ -29,21 +28,14 @@
 
 <script>
 
-
-    function popEdit(id, risorsa) {
-        var windowFeatures = "top=10, left=10, width=600, height=600, status=no, menubar=no, toolbar=no scrollbars=no";
-        window.open("/risorse/" + risorsa + "/edit/" + id, "Modifica programma", windowFeatures);
-    }
-
-
     $(document).ready(function(){
 
-        $('.delete_programma').click(function(){
+        $('.delete_corsa').click(function(){
             let data = $(this).val();
-            let id_programma = data;
+            let id_corsa = data;
             Swal.fire({
                 title: 'Attenzione',
-                text: "Eliminando il programma, saranno eliminate anche le corse associate. Continuare?",
+                text: "Stai per eliminare una corsa. Continuare?",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
@@ -52,14 +44,14 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     $.ajax({
-                        url: '/programmacorse/delete/'+ id_programma,
+                        url: '/corsa/delete/'+ id_corsa,
                         success: function() {
                             Swal.fire(
-                                'Cancellato!',
-                                'Il programma e le corse associate sono stati cancellati con successo!',
+                                'Cancellata!',
+                                'La corsa è stata eliminata con successo!',
                                 'success'
                             ),
-                                $('#'+id_programma).closest("tr").hide();
+                                $('#'+id_corsa).closest("tr").hide();
                         }
                     });
                 }
@@ -109,29 +101,33 @@
 <div class="w3-padding-large" id="main">
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-        <h1 class="w3-jumbo" style="font-size:50px;"><span class="w3-hide-small"><p>Dettaglio <span class="w3-jumbo" style="color:#00e6e6;">programmi</span> </p></span></h1>
+        <h1 class="w3-jumbo" style="font-size:50px;"><span class="w3-hide-small"><p>Dettaglio <span class="w3-jumbo" style="color:#00e6e6;">programma</span> </p></span></h1>
     </header>
 
     <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
 
+        <div class="w3-center"><a th:href="@{/corsa/insert/{id}(id=${programmaCorse.id})}" class="w3-button w3-blue">Aggiungi nuova corsa</a></div>
+
         <div class="w3-row">
             <div class="tabella1">
-                <h2 style="color:white;">Lista programmi</h2>
+                <h2 style="color:white;">Programma valido dal <span th:text="${#dates.format(programmaCorse.inizioValidita, 'dd/MM/YYYY')}">13 february 2011</span> al <span th:text="${#dates.format(programmaCorse.fineValidita, 'dd/MM/YYYY')}">13 february 2011</span></h2>
                 <table class="w3-table w3-striped w3-bordered animazione1">
                     <tr>
                         <th>ID</th>
-                        <th>Data inizio validità</th>
-                        <th>Data fine validità</th>
-                        <th></th>
+                        <th>Orario</th>
+                        <th>Linea</th>
+                        <th>Conducenti</th>
+                        <th>Mezzi</th>
                         <th></th>
                     </tr>
-                    <tr th:each="programmaCorse: ${listaProgrammi}" th:id="${programmaCorse.id}">
-                        <!--/*@thymesVar id="programmaCorse" type=""*/-->
-                        <td th:text="${programmaCorse.id}">ID</td>
-                        <td th:text="${programmaCorse.inizioValidita}">Data Inizio Validità</td>
-                        <td th:text="${programmaCorse.fineValidita}">Data Fine Validità</td>
-                        <td> <a th:href="@{/programmacorse/dettaglio/{id}(id=${programmaCorse.id})}"><span class="iconify" data-icon="ic:sharp-search" data-inline="false"></span></a></td>
-                        <td ><button class="delete_programma" th:value="${programmaCorse.id}" id="programmaCorse"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+                    <tr th:each="corsa: ${listaCorse}" th:id="${corsa.id}">
+                        <!--/*@thymesVar id="corsa" type=""*/-->
+                        <td th:text="${corsa.id}">ID</td>
+                        <td th:text="${corsa.orario}">Orario</td>
+                        <td th:text="${corsa.linea}">Linea</td>
+                        <td th:text="${corsa.conducenti}">Conducenti</td>
+                        <td th:text="${corsa.mezzi}">Mezzi</td>
+                        <td ><button style="border: none;" class="delete_corsa" th:value="${corsa.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
                     </tr>
                 </table>
             </div>
